(library
 (name mirage_block_unix_modified)
 (public_name chamelon.mirage_block_unix_modified)
 (libraries cstruct cstruct-lwt logs lwt uri fmt rresult)
 (wrapped false)
 (foreign_stubs (language c) (names odirect_stubs blkgetsize_stubs lseekhole_stubs flush_stubs
   writev_stubs readv_stubs flock_stubs discard_stubs chsize_stubs)))
